@@ -7,6 +7,8 @@ Changes in version 1.012
 
 - Added a library of number formatting routines.
 
+- Modifed str_subst to return a count of substitutions.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
